# xbak

./: .gitignore  CMakeLists.txt  ChangeLog  README.md
src/: CMakeLists.txt  Makefile  animationresource.cc  animationresource.h  audio.h  badgewidget.cc  badgewidget.h  basicfile.cc  basicfile.h  bmp.cc  bmp.h  bookresource.cc  bookresource.h  buttonwidget.cc  buttonwidget.h  camera.cc  camera.h  chapter.cc  chapter.h  characterbuttonwidget.cc  characterbuttonwidget.h  choicewidget.cc  choicewidget.h  clock.h  combatviewwidget.cc  combatviewwidget.h  compasswidget.cc  compasswidget.h  configdata.h  configfile.cc  configfile.h  configresource.cc  configresource.h  containerwidget.cc  containerwidget.h  convertresource.cc  defines.h  dialog.cc  dialog.h  dialogfactory.cc  (+198 more)
